--- a/slides/presentation.tex
+++ b/slides/presentation.tex
@@ -252,7 +252,7 @@
     \begin{column}{0.25\textwidth}
       Second constraint reimplements first constraint.
 
-      $\implies$ Pointless.
+      $\implies$ Ineffective.
     \end{column}
     \begin{column}{0.25\textwidth}
       \begin{center}
@@ -262,7 +262,7 @@
     \begin{column}{0.25\textwidth}
       Third constraint reimplements first and second constraint.
 
-      $\implies$ Pointless.
+      $\implies$ Ineffective.
     \end{column}
     \begin{column}{0.25\textwidth}
       \begin{center}
