Added defense date to front page

--- a/front-page-alone.tex
+++ b/front-page-alone.tex
@@ -18,7 +18,9 @@
 \HRule \\[0.6cm]
 { \huge \bfseries Towards a Wide-Coverage Grammar: Graphical Abstract Categorial Grammars }\\[0.4cm]
 
-\HRule \\[1.75cm]
+\HRule \\[0.75cm]
+
+June 25, 2013 \\[0.5cm]
 
 \begin{minipage}{0.4\textwidth}
 \begin{flushleft} \large
