Fixed links by omitting PDFjam from the pipeline

--- a/front-page.tex
+++ b/front-page.tex
@@ -1,3 +1,7 @@
+\documentclass{report}
+
+\usepackage{graphicx}
+
 \begin{document}
 
 \begin{titlepage}
@@ -5,16 +9,18 @@
 
 \newcommand{\HRule}{\includegraphics[width=\textwidth]{images/hrule.png}}
 
-%\includegraphics[width=0.9\textwidth]{images/UL_UFR_MI.jpg}\\[2cm]
+\includegraphics[width=0.9\textwidth]{images/UL_UFR_MI.jpg}\\[1.5cm]
 
-\textsc{\LARGE Master Sciences Cognitives et Applications\\Sp\'ecialit\'e Traitement Automatique du Langage}\\[1.5cm]
+\textsc{\LARGE Master Sciences Cognitives et Applications\\[0.5cm]Sp\'ecialit\'e Traitement Automatique du Langage}\\[1.5cm]
 
 \textsc{\Large Master Thesis}\\[0.65cm]
 
 \HRule \\[0.6cm]
 { \huge \bfseries Towards a Wide-Coverage Grammar: Graphical Abstract Categorial Grammars }\\[0.4cm]
 
-\HRule \\[1.75cm]
+\HRule \\[0.5cm]
+
+June 25, 2013 \\[0.75cm]
 
 \begin{minipage}{0.4\textwidth}
 \begin{flushleft} \large
@@ -30,14 +36,18 @@ Maxime \textsc{Amblard} \\
 ~
 \end{flushright}
 \end{minipage}
-~\\[2.1cm]
-%\includegraphics[width=0.35\textwidth]{images/logoLORIA.jpg}~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\includegraphics[width=0.35\textwidth]{images/Calligramme.png}
+~\\[0.6cm]
+\includegraphics[width=0.35\textwidth]{images/logoLORIA.jpg}~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\includegraphics[height=0.10\textheight]{images/Calligramme.png}
 
 \end{center}
 \end{titlepage}
 
 %\maketitle
 
-\newpage
-~~ \pagenumbering{gobble}
-\newpage
+%% \newpage
+%% ~~ \pagenumbering{gobble}
+%% \newpage
+%% \pagenumbering{arabic}
+%% \setcounter{page}{3}
+
+\end{document}
