--- a/thesis.tex
+++ b/thesis.tex
@@ -11,6 +11,7 @@
 \renewcommand\thesubfigure{(\alph{subfigure})}
 \usepackage{cancel}
 \usepackage[nottoc,numbib]{tocbibind}
+\usepackage{pdfpages}
 
 %% Linear implication from Alessio Guglielmi
 %% https://groups.google.com/forum/?fromgroups=#!topic/comp.text.tex/0B4C3F_BsVI
@@ -20,7 +21,12 @@
 \newtheorem*{theorem}{Theorem}
 \newtheorem*{corollary}{Corollary}
 
-\input{front-page}
+\begin{document}
+
+\includepdf[pages={1}]{front-page.pdf}
+\newpage
+~~ \pagenumbering{gobble}
+\newpage
 
 \input{abstract}
 \input{acknowledgments}
